--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "icx-sdk-sample",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Doge-is-Dope.github.io/icx-sdk-sample",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
